[package]
name = "merlin"
version = "0.1.0"
edition = "2021"
authors = ["Maxence Maire"]

[dependencies]
bevy_ecs = "0.15.0"
bevy_hierarchy = "0.15.0"
bitflags = "2.7.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
crossbeam = "0.8.4"
env_logger = "0.11.5"
glam = "0.29.2"
gltf = "1.4.1"
itertools = "0.13.0"
ktx2 = "0.3.0"
rapier3d = "0.22.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
wgpu = "23.0.1"
winit = "0.30.5"
